# MinerGL

./: CMakeLists.txt  main.cpp
